--- a/Allineamento.ipynb
+++ b/Allineamento.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "273955bc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ncanale/Analisi/e+BOOST_T9_2025/eplusBOOST_2025_T9/Allineamento.py:68: SyntaxWarning: invalid escape sequence '\\m'\n",
-      "  testo = f'$\\mu = $ {mu:.2e} rad \\n $\\sigma$ = {oP[2]:.2e} \\n offset_x = {offset:.2e} cm'\n",
-      "/home/ncanale/Analisi/e+BOOST_T9_2025/eplusBOOST_2025_T9/Allineamento.py:68: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "  testo = f'$\\mu = $ {mu:.2e} rad \\n $\\sigma$ = {oP[2]:.2e} \\n offset_x = {offset:.2e} cm'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#%matplotlib widget\n",
     "import numpy as np\n",
@@ -36,25 +25,25 @@
     "\n",
     "from collections.abc import Iterable\n",
     "from Allineamento import *\n",
-    "import Utils_v2\n",
-    "from Utils_v2 import *\n"
+    "import Utils\n",
+    "from Utils import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "01c2ea04-cb44-4be7-8a1d-4b124ccf8ff5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def configurator(year,material):\n",
-    "    import Utils_v2\n",
+    "    import Utils\n",
     "    import json\n",
     "\n",
-    "    Utils_v2.Swan = Swan_h\n",
-    "    Utils_v2.Year = year\n",
-    "    Utils_v2.Material = material\n",
-    "    print('SWAN ',Utils_v2.Swan,'YEAR ',Utils_v2.Year, material,'\\n')\n",
+    "    Utils.Swan = Swan_h\n",
+    "    Utils.Year = year\n",
+    "    Utils.Material = material\n",
+    "    print('SWAN ',Utils.Swan,'YEAR ',Utils.Year, material,'\\n')\n",
     "\n",
     "    ## Open config and correct offset dizionary ##\n",
     "\n",
@@ -75,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e8b6a07e",
    "metadata": {},
    "outputs": [
@@ -104,13 +93,13 @@
     "material = 'W_1.5mm'\n",
     "dizi, mycmap = configurator(year,material)\n",
     "\n",
-    "import Utils_v2\n",
-    "from Utils_v2 import *\n"
+    "import Utils\n",
+    "from Utils import *\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ea1b2b33-2e56-4835-a084-bcb172e40a3e",
    "metadata": {},
    "outputs": [
@@ -137,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "ce68580c",
    "metadata": {},
    "outputs": [
@@ -168,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "c32862c2",
    "metadata": {},
    "outputs": [
@@ -270,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "be9f9556",
    "metadata": {},
    "outputs": [
@@ -282,15 +271,15 @@
       "<>:43: SyntaxWarning: invalid escape sequence '\\p'\n",
       "<>:20: SyntaxWarning: invalid escape sequence '\\p'\n",
       "<>:43: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "/tmp/ipykernel_131225/1485225367.py:20: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "/tmp/ipykernel_131997/1485225367.py:20: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  ax.plot(binc, myGauss(binc, *popt), ls = \"--\", c = \"k\", label = f\"Fit ({popt[1]:.2f} $\\pm$ {popt[2]:.2f} cm)\")\n",
-      "/tmp/ipykernel_131225/1485225367.py:43: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "/tmp/ipykernel_131997/1485225367.py:43: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  ax.plot(binc, myGauss(binc, *popt), ls = \"--\", c = \"k\", label = f\"Fit ({popt[1]:.2f} $\\pm$ {popt[2]:.2f} cm)\")\n",
       "/home/ncanale/anaconda3/envs/env_0/lib/python3.12/site-packages/scipy/optimize/_minpack_py.py:975: RuntimeWarning: divide by zero encountered in divide\n",
       "  transform = 1.0 / sigma\n",
-      "/tmp/ipykernel_131225/1485225367.py:18: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "/tmp/ipykernel_131997/1485225367.py:18: OptimizeWarning: Covariance of the parameters could not be estimated\n",
       "  popt, pcov = curve_fit(myGauss, binc, h, sigma = np.sqrt(h), absolute_sigma = True, p0 = p0)\n",
-      "/tmp/ipykernel_131225/1485225367.py:41: OptimizeWarning: Covariance of the parameters could not be estimated\n",
+      "/tmp/ipykernel_131997/1485225367.py:41: OptimizeWarning: Covariance of the parameters could not be estimated\n",
       "  popt, pcov = curve_fit(myGauss, binc, h, sigma = np.sqrt(h), absolute_sigma = True, p0 = p0)\n"
      ]
     },
@@ -362,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f9e14457",
    "metadata": {},
    "outputs": [
@@ -403,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "15ad9df8",
    "metadata": {},
    "outputs": [],
@@ -448,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "916e1371",
    "metadata": {},
    "outputs": [
@@ -458,7 +447,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\p'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "/tmp/ipykernel_131225/249825197.py:1: SyntaxWarning: invalid escape sequence '\\p'\n",
+      "/tmp/ipykernel_131997/249825197.py:1: SyntaxWarning: invalid escape sequence '\\p'\n",
       "  '''dist_chambers = d_tele12\n"
      ]
     },
@@ -468,7 +457,7 @@
        "'dist_chambers = d_tele12\\n\\ndeltaX = x2-x1 # tele 2-1 \\n#print(\\'deltaX\\',deltaX)\\ndeltaY = y2-y1\\n#print(\\'deltaY\\',deltaY)\\n\\ntheta_12_x = np.arctan(deltaX/dist_chambers) * 1e6 # urad\\ntheta_12_y = np.arctan(deltaY/dist_chambers) * 1e6 # urad\\n\\n#print(\\'theta_12_x\\', theta_12_x, \\'\\n\\', \\'theta_12_y\\', theta_12_y)\\n\\ntheta12 = [theta_12_x, theta_12_y]\\nthetaLbl = [\"x\", \"y\"]\\nnum_bins = 100\\nrange_hist = [[-5000,5000],[-5000,5000]]\\n\\nfig, ax = plt.subplots(1,2)\\n\\nfig.set_size_inches(9,5)\\nplt.subplots_adjust(hspace=0.5,wspace =0.3) \\n\\ntitles = [fr\"$\\theta_X in 12$ \", fr\"$\\theta_Y in12 $\"]\\ndivs = []\\npopt_list12 =[]\\nfor i in range(2):\\n    h, bins = np.histogram(theta12[i], bins = num_bins)#, range=range_hist[i] )\\n    #print(h)\\n    binc = bins[:-1] + (bins[1] - bins[0]) / 2\\n    #print(binc)\\n    p0 = (np.max(h), binc[np.argmax(h)], np.std(binc))\\n    cond = (h>0) \\n    popt, pcov = curve_fit(Gauss, binc[cond], h[cond], sigma = np.sqrt(h[cond]), absolute_sigma = True, p0 = p0)\\n    popt_list12.append(popt[1])\\n    ax[i].plot(binc, h, ds = \"steps-mid\", c = \"hotpink\", lw = .7,\\n               label = fr\"$\\theta_{thetaLbl[i]}$\")\\n    \\n    ax[i].plot(binc, myGauss(binc, *popt), ls = \"--\", c = \"k\", label = f\"Fit ({popt[1]:.2f} $\\\\pm$ {popt[2]:.2f} urad)\")\\n    \\n    ax[i].grid()\\n    ax[i].set_title(titles[i])\\n    ax[i].set_ylabel(\"Entries\", fontsize = 10)    \\n    ax[i].set_xlabel(r\"$\\theta$ [urad]\",fontsize = 10)\\n\\n    ax[i].legend(fontsize = 10)\\n    divs.append(popt[2])\\n    print(f\"La divergenza in {thetaLbl[i]} vale {popt[2]:.2f} urad\")\\n\\nplt.show()\\n# Creazione del plot\\nfig, ax = plt.subplots()\\nfig.set_size_inches(9,5)\\nax.hist2d(theta12[0], theta12[1], bins=num_bins)#, range = range_hist)\\n\\n# Etichette degli assi\\nax.grid()\\nax.set_xlabel(\\'thetax\\')\\nax.set_ylabel(\\'thetay\\')\\n        \\nplt.show()\\nprint(divs)\\n\\nwith open(config_file, \"r\") as file:\\n        config_data = json.load(file)\\n    \\nconfig_data[\\'div_x\\'] = divs[0]\\nconfig_data[\\'div_y\\'] = divs[1]\\n    \\n    \\nwith open(config_file, \"w\") as file:\\n    json.dump(config_data, file, indent=4)'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e0933670",
    "metadata": {},
    "outputs": [
@@ -591,7 +580,7 @@
        " 'offset_Y2': np.float64(-0.032554905519040916)}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
