--- a/NEW_signal_checker.ipynb
+++ b/NEW_signal_checker.ipynb
@@ -104,17 +104,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2999.33\n",
-      "-18149.94\n",
-      "17.00\n",
-      "0.00\n",
-      "0.00\n"
+      "./config_W_1.5mm_24.json\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'Facility'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mUtils_v2\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m## Import dictionary from the json\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m dizi, mycmap \u001b[38;5;241m=\u001b[39m \u001b[43mconfigurator\u001b[49m\u001b[43m(\u001b[49m\u001b[43myear\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmaterial\u001b[49m\u001b[43m,\u001b[49m\u001b[43mSwan_h\u001b[49m\u001b[43m)\u001b[49m  \n\u001b[1;32m      7\u001b[0m m \u001b[38;5;241m=\u001b[39m dizi[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mslope_Calo\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      8\u001b[0m q \u001b[38;5;241m=\u001b[39m dizi[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mintercept_Calo\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "File \u001b[0;32m~/Analisi/e+BOOST_T9_2025/eplusBOOST_2025_T9/Utils_v2.py:49\u001b[0m, in \u001b[0;36mconfigurator\u001b[0;34m(year, material, Swan_h)\u001b[0m\n\u001b[1;32m     46\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;66;03m## ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ##\u001b[39;00m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;66;03m## vvvvvv Open Setup config and check the offset from dizionary vvvvvv ##\u001b[39;00m\n\u001b[0;32m---> 49\u001b[0m setup_config_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./setup_config_\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[43mdizi\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFacility\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(year)[\u001b[38;5;241m2\u001b[39m:] \u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.json\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     50\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(setup_config_file, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fs:\n\u001b[1;32m     51\u001b[0m         dizi_setup \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(fs)     \n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Facility'"
      ]
     }
    ],
    "source": [
-    "import Utils_v2\n",
-    "from Utils_v2 import *\n",
+    "import Utils\n",
+    "from Utils import *\n",
     "\n",
     "## Import dictionary from the json\n",
     "dizi, mycmap = configurator(year,material,Swan_h)  \n",
@@ -1302,7 +1310,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env_0",
    "language": "python",
    "name": "python3"
   },
@@ -1316,7 +1324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
