--- a/OM/compare_epBOOST.ipynb
+++ b/OM/compare_epBOOST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e8d1fd40",
    "metadata": {},
    "outputs": [
@@ -23,8 +23,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import h5py\n",
-    "import numpy as np\n",
-    "from Allineamento import *"
+    "import numpy as np"
    ]
   },
   {
