--- a/OM/check_signal_epBOOST.ipynb
+++ b/OM/check_signal_epBOOST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5408c905",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,8 @@
     "import matplotlib as mpl\n",
     "import h5py\n",
     "import numpy as np\n",
-    "import json"
+    "import json\n",
+    "from datetime import datetime\n"
    ]
   },
   {
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "75b8d671",
    "metadata": {},
    "outputs": [
@@ -65,8 +66,9 @@
     "    run_config = json.load(file)\n",
     "\n",
     "run_number = run_config.get(\"run_number\")\n",
+    "ora_attuale = datetime.now().time()\n",
     "\n",
-    "print(f\"Run number: {run_number}\")"
+    "print(f\"Run number: {run_number} -- {ora_attuale.strftime(\"%H:%M:%S\")}\")"
    ]
   },
   {
