--- a/OM/check_signal_epBOOST.ipynb
+++ b/OM/check_signal_epBOOST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "5408c905",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "e920ea83",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "75b8d671",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run number: 730236 -- ORE 23:46:25\n"
+      "Run number: 730236\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
     "run_number = run_config.get(\"run_number\")\n",
     "ora_attuale = datetime.now().time()\n",
     "\n",
-    "print(f\"Run number: {run_number} -- ORE{ora_attuale.strftime('%H:%M:%S')}\")"
+    "print(f\"Run number: {run_number}\")# -- ORE{ora_attuale.strftime('%H:%M:%S')}\")"
    ]
   },
   {
