--- a/compare_epBOOST.ipynb
+++ b/compare_epBOOST.ipynb
@@ -12,7 +12,8 @@
     "import matplotlib as mpl\n",
     "import h5py\n",
     "import numpy as np\n",
-    "from Allineamento import *"
+    "from Allineamento import *\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "f0fc53b0",
    "metadata": {},
    "outputs": [],
