--- a/OM/check_signal_epBOOST.ipynb
+++ b/OM/check_signal_epBOOST.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "75b8d671",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
     "run_number = run_config.get(\"run_number\")\n",
     "ora_attuale = datetime.now().time()\n",
     "\n",
-    "print(f\"Run number: {run_number}\")# -- ORE{ora_attuale.strftime('%H:%M:%S')}\")"
+    "print(f\"Run number: {run_number}\" -- ORE{ora_attuale.strftime('%H:%M:%S')}\")"
    ]
   },
   {
