--- a/OM/check_signal_epBOOST.ipynb
+++ b/OM/check_signal_epBOOST.ipynb
@@ -68,7 +68,7 @@
     "run_number = run_config.get(\"run_number\")\n",
     "ora_attuale = datetime.now().time()\n",
     "\n",
-    "print(f\"Run number: {run_number}\" -- ORE{ora_attuale.strftime('%H:%M:%S')}\")"
+    "print(f\"Run number: {run_number}\")# -- ORE{ora_attuale.strftime('%H:%M:%S')}\")"
    ]
   },
   {
