--- a/OM/compare_epBOOST.ipynb
+++ b/OM/compare_epBOOST.ipynb
@@ -172,7 +172,7 @@
     "scan_number = run_config.get(\"scan_number\") \n",
     "label_scan = run_config.get(\"scan_labels\")\n",
     "ora_attuale = datetime.now().time()\n",
-    "print(f\"Run numbers: {scan_number}  -- ORE{ora_attuale.strftime('%H:%M:%S')}\")"
+    "print(f\"Run numbers: {scan_number}\")#  -- ORE{ora_attuale.strftime('%H:%M:%S')}\")"
    ]
   },
   {
