--- a/OM/compare_epBOOST.ipynb
+++ b/OM/compare_epBOOST.ipynb
@@ -5,9 +5,16 @@
    "execution_count": null,
    "id": "e8d1fd40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: module://matplotlib_inline.backend_inline\n"
+     ]
+    }
+   ],
    "source": [
-    "%matplotlib widget\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import h5py\n",
