--- a/OM/compare_epBOOST.ipynb
+++ b/OM/compare_epBOOST.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "9b3ee542",
    "metadata": {},
    "outputs": [],
@@ -64,8 +64,8 @@
     "    info_pluss =[]\n",
     "    bases = []\n",
     "    for run_number in runs:\n",
-    "        data_path =f'../data/TB_T9_2025/run{run_number}.h5'\n",
-    "        # data_path =f'/eos/project/i/insulab-como/testBeam/TB_2025_06_T9_epBOOST/HDF5/run{run_number}.h5'\n",
+    "        # data_path =f'../data/TB_T9_2025/run{run_number}.h5'\n",
+    "        data_path =f'/eos/project/i/insulab-como/testBeam/TB_2025_06_T9_epBOOST/HDF5/run{run_number}.h5'\n",
     "        print('\\nopening ', data_path)\n",
     "        pos = []\n",
     "        phs = []\n",
