--- a/OM/compare_epBOOST.ipynb
+++ b/OM/compare_epBOOST.ipynb
@@ -384,13 +384,13 @@
    ],
    "source": [
     "print('########## RATIOS ##########')\n",
-    "print(f\"\\nNCLU ax/rnd = {100 * (means_nclu3['Axis'] / means_nclu3['Amorphous']):.2f}% \")\n",
-    "print(f\"QTOT ax/rnd = {100 * (means_qtot3['Axis'] / means_qtot3['Amorphous']):.2f}% \\n\")\n",
-    "if 'Conventional' in label_scan:\n",
-    "    print(f\"NCLU ax/conv = {100 * (means_nclu3['Axis'] / means_nclu3['Conventional']):.2f}% \")\n",
-    "    print(f\"QTOT ax/conv = {100 * (means_qtot3['Axis'] / means_qtot3['Conventional']):.2f}% \\n\")\n",
-    "    print(f\"NCLU amorph/conv = {100 * (means_nclu3['Amorphous'] / means_nclu3['Conventional']):.2f}% \")\n",
-    "    print(f\"QTOT amorph/conv = {100 * (means_qtot3['Amorphous'] / means_qtot3['Conventional']):.2f}% \\n\")\n",
+    "print(f\"\\nNCLU ax/rnd = {100 * (means_nclu3['Axis 6GeV'] / means_nclu3['Amorphous 6GeV']):.2f}% \")\n",
+    "print(f\"QTOT ax/rnd = {100 * (means_qtot3['Axis 6GeV'] / means_qtot3['Amorphous 6GeV']):.2f}% \\n\")\n",
+    "if 'Conventional 6GeV' in label_scan:\n",
+    "    print(f\"NCLU ax/conv = {100 * (means_nclu3['Axis 6GeV'] / means_nclu3['Conventional 6GeV']):.2f}% \")\n",
+    "    print(f\"QTOT ax/conv = {100 * (means_qtot3['Axis 6GeV'] / means_qtot3['Conventional 6GeV']):.2f}% \\n\")\n",
+    "    print(f\"NCLU amorph/conv = {100 * (means_nclu3['Amorphous 6GeV'] / means_nclu3['Conventional 6GeV']):.2f}% \")\n",
+    "    print(f\"QTOT amorph/conv = {100 * (means_qtot3['Amorphous 6GeV'] / means_qtot3['Conventional 6GeV']):.2f}% \\n\")\n",
     "else: print()\n",
     "print('#############################')"
    ]
@@ -494,13 +494,13 @@
    ],
    "source": [
     "print('########## RATIOS ##########')\n",
-    "print(f\"\\nNCLU ax/rnd = {100 * (means_nclu4['Axis'] / means_nclu4['Amorphous']):.2f}% \")\n",
-    "print(f\"QTOT ax/rnd = {100 * (means_qtot4['Axis'] / means_qtot4['Amorphous']):.2f}% \\n\")\n",
-    "if 'Conventional' in label_scan:\n",
-    "    print(f\"NCLU ax/conv = {100 * (means_nclu4['Axis'] / means_nclu4['Conventional']):.2f}% \")\n",
-    "    print(f\"QTOT ax/conv = {100 * (means_qtot4['Axis'] / means_qtot4['Conventional']):.2f}% \\n\")\n",
-    "    print(f\"NCLU amorph/conv = {100 * (means_nclu4['Amorphous'] / means_nclu4['Conventional']):.2f}% \")\n",
-    "    print(f\"QTOT amorph/conv = {100 * (means_qtot4['Amorphous'] / means_qtot4['Conventional']):.2f}% \\n\")\n",
+    "print(f\"\\nNCLU ax/rnd = {100 * (means_nclu4['Axis 6GeV'] / means_nclu4['Amorphous 6GeV']):.2f}% \")\n",
+    "print(f\"QTOT ax/rnd = {100 * (means_qtot4['Axis 6GeV'] / means_qtot4['Amorphous 6GeV']):.2f}% \\n\")\n",
+    "if 'Conventional 6GeV' in label_scan:\n",
+    "    print(f\"NCLU ax/conv = {100 * (means_nclu4['Axis 6GeV'] / means_nclu4['Conventional 6GeV']):.2f}% \")\n",
+    "    print(f\"QTOT ax/conv = {100 * (means_qtot4['Axis 6GeV'] / means_qtot4['Conventional 6GeV']):.2f}% \\n\")\n",
+    "    print(f\"NCLU amorph/conv = {100 * (means_nclu4['Amorphous 6GeV'] / means_nclu4['Conventional 6GeV']):.2f}% \")\n",
+    "    print(f\"QTOT amorph/conv = {100 * (means_qtot4['Amorphous 6GeV'] / means_qtot4['Conventional 6GeV']):.2f}% \\n\")\n",
     "else: print()\n",
     "print('#############################')"
    ]
