--- a/OM/compare_epBOOST.ipynb
+++ b/OM/compare_epBOOST.ipynb
@@ -329,7 +329,7 @@
     "        label = f'{label_scan[j]}'\n",
     "        axs[0].hist(ph_calo_photon[logi], bins=20, range=(0, 3000), label=f'{label}\\nmean: {np.mean(ph_calo_photon[logi]):.1f}', density=True, **opt_hist)\n",
     "        axs[1].hist(qtot[:, 0][logi], bins=50, range=(0, 40000), label=f'{label}\\nmean: {np.mean(qtot[:, 0][logi]):.1f}', density=True, **opt_hist)\n",
-    "        axs[2].hist(nclu[:, 0][logi], bins=np.max(nclu[:, 0][logi]), label=f'{label}\\nmean: {np.mean(nclu[:, 0][logi]):.2f}', density=True, **opt_hist)\n",
+    "        axs[2].hist(nclu[:, 0][logi], bins=np.max(nclu[:, 0][logi])+1, label=f'{label}\\nmean: {np.mean(nclu[:, 0][logi]):.2f}', density=True, **opt_hist)\n",
     "        axs[3].hist(x3[logi], bins=20, range=(x_cry_cut[0]-1, x_cry_cut[1]+1), label=label, density=True, **opt_hist)\n",
     "        axs[4].hist(y3[logi], bins=20, range=(y_cry_cut[0]-1, y_cry_cut[1]+1), label=label, density=True, **opt_hist)\n",
     "\n",
@@ -449,7 +449,7 @@
     "        ax[1].set_title('Y4')\n",
     "        ax[1].set_xlabel('Y4')\n",
     "\n",
-    "        ax[2].hist(nclu[:,2][mask], bins = np.max(nclu[:, 2][mask]), histtype = 'step', density = iWantDensity,label = f'{label_scan[i]} -- mean {np.mean(nclu[:,2][mask]):.4f}')\n",
+    "        ax[2].hist(nclu[:,2][mask], bins = np.max(nclu[:, 2][mask])+1, histtype = 'step', density = iWantDensity,label = f'{label_scan[i]} -- mean {np.mean(nclu[:,2][mask]):.4f}')\n",
     "        # ax[2].hist(nclu[:,3][mask], bins = 30, histtype = 'step')\n",
     "        ax[2].set_title('Nclu4')\n",
     "        # ax[2].set_yscale('log')\n",
