--- a/OM/compare_epBOOST.ipynb
+++ b/OM/compare_epBOOST.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e2f45f0b-aa54-4e81-8d3e-7d9c81857e79",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "787.58 urad\n"
+      "theta cut: 787.58 urad\n"
      ]
     }
    ],
