--- a/OM/compare_epBOOST.ipynb
+++ b/OM/compare_epBOOST.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "4524b0b9",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run numbers: [730245, 730224, 730247, 730250]\n"
+      "Run numbers: [730245, 730224, 730247, 730250] -- ultimo aggiornamento 19:20:15\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
     "scan_number = run_config.get(\"scan_number\") \n",
     "label_scan = run_config.get(\"scan_labels\")\n",
     "ora_attuale = datetime.now().time()\n",
-    "print(f\"Run numbers: {scan_number}\")#  -- ORE{ora_attuale.strftime('%H:%M:%S')}\")"
+    "print(f\"Run numbers: {scan_number} -- ultimo aggiornamento {ora_attuale.strftime('%H:%M:%S')}\")"
    ]
   },
   {
