--- a/OM/check_signal_epBOOST.ipynb
+++ b/OM/check_signal_epBOOST.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "80db5ad4",
    "metadata": {},
    "outputs": [
@@ -81,8 +81,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "787.58 urad\n",
-      "730250 -- N spill: 356 -- events in x1: 35996\n"
+      "theta cut: ± 787.58 urad\n",
+      "730250 -- N spill: 373 -- events in x1: 37738\n"
      ]
     }
    ],
@@ -174,13 +174,14 @@
     "if run_number in [730250]: ## add 2.866GeV runs\n",
     "    theta_crit = np.sqrt((2*887/(2.86*1e9))) ##rad\n",
     "\n",
-    "print(f'{theta_crit*1e6:.2f} urad')\n",
     "CutTheta = True\n",
     "\n",
     "if CutTheta == True:\n",
     "    theta_cut = theta_crit\n",
     "else:\n",
     "    theta_cut = 100000000000\n",
+    "    \n",
+    "print(f'theta cut: ± {theta_cut*1e6:.2f} urad')\n",
     "\n",
     "print(f'{run_number} -- N spill: {info_plus[:,0][-1]} -- events in x1: {len(x1)}')"
    ]
