--- a/OM/compare_epBOOST.ipynb
+++ b/OM/compare_epBOOST.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "e2f45f0b-aa54-4e81-8d3e-7d9c81857e79",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "theta cut: 787.58 urad\n"
+      "theta cut: ±787.58 urad\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
     "    theta_cut = theta_crit\n",
     "else:\n",
     "    theta_cut = 100000000000\n",
-    "print(f'theta cut: {theta_cut*1e6:.2f} urad')"
+    "print(f'theta cut: ± {theta_cut*1e6:.2f} urad')"
    ]
   },
   {
