--- a/OM/compare_epBOOST.ipynb
+++ b/OM/compare_epBOOST.ipynb
@@ -170,7 +170,7 @@
     "from datetime import datetime\n",
     "\n",
     "# === Load run numbers ===\n",
-    "with open(\"multiple_run_new.json\", \"r\") as f:\n",
+    "with open(\"multiple_run.json\", \"r\") as f:\n",
     "    run_list = json.load(f).get(\"scan_number\", [])\n",
     "\n",
     "# === Load run configuration ===\n",
