--- a/stereogramma_new.ipynb
+++ b/stereogramma_new.ipynb
@@ -574,7 +574,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_0",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -588,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
